# HydraAV

./: .gitignore  INSTALL.md  LICENSE  README.md
sandbox/: Dockerfile  README.md  container_analyzer.py  requirements.txt
scanner/: CMakeLists.txt
scanner/include/: directory_scanner.h  file_utils.h  scanner.h  signatures.h
scanner/src/: directory_scanner.cpp  file_utils.cpp  main.cpp  scanner_core.cpp  signatures.cpp
scripts/: build.bat  build.sh  test.bat  test.sh
tests/demo_files/: README.md  clean_test.py  malware_test.py  suspicious_test.py
